--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Prepare Env
         run: |
         export GO111MODULE=on
-        export PATH=$PATH:~/go/bin
+        export PATH=$PATH:$(go env GOPATH)/bin
 
       - name: Install all the build and lint dependencies
         run: make setup
