--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,4 +34,6 @@ jobs:
           #make linter-install
 
       - name: Run all the tests and code checks
-        run: make ci
+        run: |
+          make test
+          #make ci
